# WebSite-HappyNewYear

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: settings.py  urls.py
src/config/: __init__.py  settings.py  urls.py  wsgi.py
src/main/: admin.py  models.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_remove_dog_group.py
src/main/templates/main/: index.html
src/static/css/: style.css
src/templates/: base.html
