[tool.poetry]
name = "website-happynewyear"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Kap <kapustaevg@gmail.com>"]
readme = "README.md"
packages = [{include = "website_happynewyear"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.8"
pydantic-settings = "^2.1.0"
mysqlclient = "^2.2.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
